src/pages/ru/v1.12.0/installation/network-options.mdx
---
Заголовок: «Настройки сети»
MetaTitle: «Настройки сети»
MetaDescription: «Плагин настроек сети для OpenReplay»
---
Импортируйте Aside из «~/components/Aside.astro»

На этой странице описывается пространство имен `network` SDK JavaScript OpenReplay [options] (/sdk/constructor). Она относится к захвату сетевых запросов, таких как `fetch` и `XHR`, включая необходимые пакеты, и проверить их позже при воспроизведении записей сеансов. Это очень полезно для понимания и устранения проблем.

## Опции

- `failuresOnly`: Захватывает запросы с кодом состояния HTTP 4xx-5xx. По умолчанию: `false`.
- `sessionTokenHeader`: Если вы включили некоторые из наших интеграций в бэкенд [integrations] (/integrations) (т. е. Sentry), вы можете использовать эту опцию для указания имени заголовка (или активировать заголовок по умолчанию «X-OpenReplay-SessionToken», установив опцию в «true»). Этот последний автоматически добавляется к каждому запросу fetch / XHR для содержания значения токена сеанса OpenReplay. По умолчанию: `false`.
- `ignoreHeaders`: Помогает определить список заголовков, которые вы не хотите захватывать. Установите его значение в `false`, чтобы захватить все (`true`, если ничего). По умолчанию: `[«Cookie», «Set-Cookie», «Authorization»], так что конфиденциальные заголовки не будут захвачены.
- `capturePayload`: Хранит запросы / ответы тела пакетов. Это может быть очень полезно для устранения неполадок, но может стать тяжелым для использования сети, если ваше приложение широко использует запросы Fetch / XHR. По умолчанию: `false`.

<Aside type="caution">
	Захват пакетов HTTP может зарегистрировать очень чувствительные данные (например, пароли) или личную информацию, которую ваше приложение может отправлять / получать в запросах Fetch / XHR, поэтому убедитесь, что вы очистили эти данные с помощью опции `sanitizer` ниже.
</Aside>

- `captureInIframes`: Для отключения отслеживания сети внутри iFrames. По умолчанию: `true`.
- `axiosInstances`: Для указания пользовательских экземпляров axios для включения в отслеживание.
- `sanitizer`: Очистите чувствительные данные из запроса / ответа Fetch / XHR или полностью игнорируйте запрос. Вы можете подчеркнуть поля на объекте запроса, изменив и вернув его из функции (см. примеры ниже). Очистка применяется **пос
```js
network?: {
  failuresOnly: boolean;
  sessionTokenHeader: string | boolean;
  ignoreHeaders: Array<string> | boolean;
  capturePayload: boolean;
  sanitizer: (RequestResponseData) => RequestResponseData | null;
  captureInIframes: boolean;
  axiosInstances: AxiosInstance[];
}
```
